add new activity, change logic of binding

--- a/app/src/main/res/layout/spending_fragment.xml
+++ b/app/src/main/res/layout/spending_fragment.xml
@@ -39,6 +39,7 @@
         tools:text="Notis" />
 
     <EditText
+        android:gravity="top"
         android:layout_margin="8dp"
         android:padding="5dp"
         android:background="@drawable/gray_border"
