--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -31,6 +31,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="false"
+            app:headerLayout="@layout/nav_header_main2"
             app:menu="@menu/activity_main_drawer" />
 
 
