--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <!-- Inside the layout tag it is possible to set the data tag in order to set one or many variables. For this example we are having an User property-->
-    <data>
-
-        <variable
-            name="user"
-            type="cashtracker.alibard.tm.com.model.User" />
-
-    </data>
-
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/side_nav_bar"
@@ -26,15 +17,13 @@
             android:id="@+id/imageView"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:imageUrl="@{user.photo}" />
+            android:paddingTop="@dimen/nav_header_vertical_spacing"/>
 
         <TextView
             android:id="@+id/user_name_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
-            android:text="@{user.name}"
             tools:text="Ololom"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
@@ -42,8 +31,6 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="adsa@asd.asd"
-            android:text="@{user.email}" />
+            tools:text="adsa@asd.asd"/>
 
     </LinearLayout>
-</layout>
