--- a/app/src/main/res/layout/view_holder_page_header.xml
+++ b/app/src/main/res/layout/view_holder_page_header.xml
@@ -1,21 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-        <!--<variable-->
-            <!--name="test"-->
-            <!--type="cashtracker.alibard.tm.com.model.TestList" />-->
-
-        <!--<variable-->
-            <!--name="hendler"-->
-            <!--type="cashtracker.alibard.tm.com.model.Hendlers" />-->
-
-    </data>
-
-    <android.support.constraint.ConstraintLayout
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -82,5 +68,3 @@
             app:layout_constraintTop_toBottomOf="@+id/currency"
             tools:text="Some description" />
     </android.support.constraint.ConstraintLayout>
-
-</layout>
