--- a/app/src/main/res/layout/spending_fragment.xml
+++ b/app/src/main/res/layout/spending_fragment.xml
@@ -11,6 +11,7 @@
         android:hint="Price">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -22,6 +23,7 @@
         android:hint="Currency">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/currency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -39,6 +41,7 @@
         tools:text="Notis" />
 
     <EditText
+        android:id="@+id/notis"
         android:gravity="top"
         android:layout_margin="8dp"
         android:padding="5dp"
