--- a/app/src/main/res/layout/spending_fragment.xml
+++ b/app/src/main/res/layout/spending_fragment.xml
@@ -14,7 +14,7 @@
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
