--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
+        <import type="android.view.View"/>
         <variable
             name="mainFragmentModel"
             type="cashtracker.alibard.tm.com.ui.home.MainFragmentModel"/>
@@ -11,10 +12,16 @@
     android:layout_height="match_parent">
 
     <com.airbnb.epoxy.EpoxyRecyclerView
+        android:visibility="@{mainFragmentModel.empty ? View.GONE:View.VISIBLE}"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    <TextView
+        android:visibility="@{mainFragmentModel.empty ? View.VISIBLE:View.GONE}"
+        android:layout_gravity="center"
+        android:text="@string/no_spending_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
