--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -1,18 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <data>
-        <variable
-            name="viewModel"
-            type="cashtracker.alibard.tm.com.test.TestViewModel"/>
-    </data>
-    <android.support.constraint.ConstraintLayout
+    android:id="@+id/coordinatorlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <!--<FrameLayout-->
+        <!--android:id="@+id/dummy_framelayout_replacing_map"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@android:color/darker_gray"-->
+        <!--android:fitsSystemWindows="true" />-->
+    <!--</FrameLayout>-->
+    <!--<fragment-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:id="@+id/support_map"-->
+    <!--android:name="com.google.android.gms.maps.SupportMapFragment"/>-->
+
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/appbarlayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
+
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+    <!--<android.support.v4.view.ViewPager-->
+    <!--android:id="@+id/pager"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/anchor_point"-->
+    <!--android:background="@color/colorAccent"-->
+    <!--android:fitsSystemWindows="true"-->
+    <!--app:layout_behavior="@string/BackDropBottomSheetBehavior" />-->
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<TextView
-    android:text="@{viewModel.text}"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-    </android.support.constraint.ConstraintLayout>
-</layout>
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical"
+        app:anchorPoint="300dp"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="80dp"
+        app:layout_behavior="cashtracker.alibard.tm.com.utils.CustomBehavior">
+
+        <include
+            layout="@layout/bottom_sheet_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true" />
+    </android.support.v4.widget.NestedScrollView>
+
+
+    <!--<com.mahc.custombottomsheetbehavior.MergedAppBarLayout-->
+        <!--android:id="@+id/mergedappbarlayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_behavior="@string/MergedAppBarLayoutBehavior" />-->
+
+</android.support.design.widget.CoordinatorLayout>
+        <!--<android.support.v4.widget.NestedScrollView-->
+            <!--android:id="@+id/bottom_sheet"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--android:orientation="vertical"-->
+            <!--app:anchorPoint="@dimen/anchor_point"-->
+            <!--app:behavior_hideable="true"-->
+            <!--app:behavior_peekHeight="80dp"-->
+            <!--app:layout_behavior="cashtracker.alibard.tm.com.utils.BottomSheetBehaviorGoogleMapsLike">-->
+
+            <!--<include-->
+                <!--layout="@layout/bottom_sheet_content"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fitsSystemWindows="true" />-->
+        <!--</android.support.v4.widget.NestedScrollView>-->
+
